# email

./: CMakeLists.txt  email.sln  shared_buffer.hpp
message/: ReadMe.txt  message.cpp  message.hpp  message.vcxproj  message.vcxproj.filters  message_test.cpp  stdafx.cpp  stdafx.h
smtp_multi_xmpl/: smtp_multi_xmpl.cpp  smtp_multi_xmpl.vcxproj  smtp_multi_xmpl.vcxproj.filters  stdafx.cpp  stdafx.h
